# c-as-eo

./: CMakeLists.txt  readme.rst
src/model/: CMakeLists.txt  eo_any.c  eo_any.h  eo_double.c  eo_double.h  eo_int.c  eo_int.h  eo_objects.c  eo_objects.h  eo_seq.c  eo_seq.h  ext_tags.h  fibonacci.c  fibonacci.h  main.c  poly.c  poly.h  tags.h
